Startup3/css/style.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');

/* RESET */
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

html {
    font-size: 62.5%;
}

img {
    display: block;
    width: 100%;
    height: auto;
}

/* VARIABLES */
:root {
    --SECTION-PADDING: 10rem 0;
    --BRAND-PURPLE: #482BE7;
    --BRAND-DARK-PURPLE: #2f189380;
    --BACKGROUND-BLUE: #090764b4;
}

/* GENERAL STYLES */
body {
    margin: 0 auto;
    max-width: 200rem;
    font-family: 'DM sans', sans-serif;
}

h1 {
    font-size: 7.2rem;
    padding: 2rem 0;
}

h2 {
    font-size: 5.8rem;
    padding: 2rem 0;
}

h3 {
    font-size: 4.2rem;
    padding: 2rem 0;
}

h4 {
    font-weight: 700;
    font-size: 2.2rem;
}

h5 {
    font-weight: 900;
    font-size: 1.8rem;
    letter-spacing: 0.2rem;
}

p {
    font-size: 2.0rem;
    padding: 1rem 0;
    font-weight: 300;
}

:where(h1, h2, h3, h4, h5, p) {
    text-align: center;
    color: #fff;
    text-shadow: 0 0 0.1rem black;
}

a, i {
    cursor: pointer;
    display: inline-block;
    text-decoration: none;
    color: #fff;
    font-weight: 500;
}

form input[type=radio] {
    appearance: none;
    font-family: inherit;
    color: #fff;
    width: 1.2rem;
    height: 1.2rem;
    border: 0.2rem solid rgba(214, 214, 214, 0.5);
    border-radius: 50%;
    display: grid;
    place-content: center;
    cursor: hover;
}

form input[type=radio]:hover {
    cursor: pointer;
}

form input[type=radio]::before {
    content: "";
    width: 1.2rem;
    height: 1.2rem;
    border-radius: 50%;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em #fff;
}

form input[type=radio]:checked::before {
    transform: scale(1);
}

button {
    cursor: pointer;
    color: #fff;
    padding: 1rem;
    border-radius: 3rem;
    border: none;
    height: 5rem;
    transition: border .1s ease-in;
    box-sizing: border-box;
    font: inherit;
    font-size: 1.5rem;
    font-weight: 500;
}

 /* STATES */
.image--blend {
    background-blend-mode: multiply;
}

.btn--purple {
    background: var(--BRAND-PURPLE);
    width: 18rem; 
    margin-top: 6rem;
}

.btn--purple:hover{
    background: #fff;
    border: 0.2rem solid var(--BRAND-PURPLE);
    color: var(--BRAND-PURPLE);
}

.btn--green {
    background: #25DAC5;
}

.btn--green:hover {
    color: #25DAC5;
    border: 0.2rem solid #25DAC5;
    background: #fff;
}

.btn--blue {
    background: #1DA1F2;
}

.btn--blue:hover {
    color: #1DA1F2;
    border: 0.2rem solid #1DA1F2;
    background: #fff;
}

/* HEADER */
.header {
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.header ul {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex: 1;
    padding-top: 1rem;
}

.header ul li {
    list-style-type: none;
    font-size: 1.8rem;
    padding: 1rem 4rem;
    transition: transform .3s ease-out;
}

.header ul li a:hover,
.header ul li i:hover {
    color: #a5a5a5;
    text-shadow: 1px 1px 5px rgb(66, 66, 66);
    transform: scale(1.1);
}

/* HERO */
.hero {
    background-color: var(--BRAND-DARK-PURPLE);
    min-height: 100vh;
    background-image: url('../img/hero.png');
    background-size: cover;
    background-position: center right;
    position: relative; 
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.hero__carousel {
    flex: 0 1 auto;
    display: grid;
    grid-template-areas: "a a a a a";
    grid-area: a;
    grid-auto-columns: 100%;
    scroll-behavior: smooth;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scrollbar-width: none; 
    margin-bottom: 2rem;
}

.hero__wrapper {
    position: relative;
    padding: 5rem 0;
}

.hero__card:first-child {
    left: 0;
}

.hero__text {
    margin: 0 25%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.hero__buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.hero__buttons form {
    display: grid;
    grid-auto-flow: column; 
    gap: 1rem;
}

.hero #left,
.hero #right {
    position: absolute;
    background: none;
    border: none;
    cursor: pointer;
    color: #fff;
    font-size: 2rem;
    z-index: 1;
}

.hero #left {
    left: 8%;
    top: 50%;
}

.hero #right {
    right: 8%;
    top: 50%;
}

.hero i {
    font-size: 2rem;
    color: #fff;
}

.hero i:hover {
    font-size: 2rem;
    color: #c4c4c4;
}

.hero__buttons input:checked::before {
    transform: scale(1);
}

.header__spacer {
    flex: 1;
}

/* CONTENT */
.content {
    background-color: var(--BACKGROUND-BLUE);
    background-image: url('../img/content.png');
    background-size: cover;
    background-position: bottom;
}

.content__text {
    margin: 0 8%;
    padding: var(--SECTION-PADDING);
}

/* FEATURES */
.features {
    display: grid;
    grid-template-columns: 2fr 5fr 1.5fr;
    align-items: center;
    padding: var(--SECTION-PADDING);
    text-align: left;
    background-color: var(--BACKGROUND-BLUE);
    background-image: url('../img/Rectangle.png');
    background-size: cover;
    background-position: center;
}

.features__content :where(p, h3, h5) {
    text-align: left;
}

.features__content {
    margin: 0 3rem;
}

.features__heading {
    margin-bottom: 5rem;
}

.features__text {
    display: flex;
    margin-bottom: 5rem;
    gap: 5rem;
}

.features__text i {
    font-size: 5rem;
    margin-bottom: 3rem;
}

.features__text h5 {
    margin-bottom: 2rem;
}

.features__slider {
    display: grid;
    grid-auto-flow: row; 
    gap: 1rem;
    justify-content: center;
}

/* FORM */
.form {
    background-color: var(--BACKGROUND-BLUE);
    background-image: url('../img/content.png');
    background-size: cover;
    background-position: bottom;
    display: flex;
    gap: 5rem;
    padding: var(--SECTION-PADDING);
    justify-content: center;
    align-items: center;
}

.form__text {
    flex: 5 5 0;
    margin-left: 10%;
    padding: 0 5rem;
}

.form__text :where(h3, p) {
    text-align: left;
}

.form__signup-form {
    min-width: 45rem;
    min-height: 52rem;
    border-radius: 10px;
    background-color: #fff;
    margin-right: 10%;
    display: grid;
    grid-auto-rows: 'a a';
    grid-template-rows: 12% 88%;
    flex: 3 3 0;
}

.form__toggle {
    display: flex;
    align-items: center;
}

.form__toggle h5 {
    flex-basis: 50%;
    color: #1e0e62;
    font-weight: 500;
    font-size: 1.4rem;
}

.form__signup {
    position: relative;
}

.form__signup::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    border-bottom: 0.3rem solid #1e0e62;
    top: 1.5rem;
    left: 0rem;
    z-index: 1;
}

.form__signup-form form {
    padding: 7rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.form__signup-form input {
    padding: 1.3rem 1.3rem 1.3rem 2.5rem;
    border-radius: 30px;
    BORDER: 0.2rem solid rgba(31, 31, 31, 0.123);
    font-family: inherit;
    font-size: 1.8rem;
    color: rgba(21, 20, 57, 0.8);
}

.form__signup-form p {
    font-size: 1.5rem;
    text-shadow: none;
    color: rgba(31, 31, 31, 0.4);
    padding: 0;
}

@media screen and (max-width: 768px) {
    .form {
        flex-direction: column;
        justify-content: center;
        align-content: center;
        align-items: center;
    }

    .form__text {
        margin: 0 8%;
        padding: 0;
    }

    .form__text :where(h3, p) {
        text-align: center;
    }

    .form__signup-form {
        margin: 0;
    }
}

